# crocus-c

./: .clang-format  .gitignore  CMakeLists.txt  check-format.cmake
include/: action.h  board.h  common.h  domain.h  enums.h  game.h  numbers.h  piece.h  position.h  positions.h
include/client/: animation.h  client_board.h  client_common.h  client_domain.h  client_game.h  common.h  control_board.h  game_context.h  point.h  selection_state.h  sprites.h
include/client/gui/imgui/: imconfig-SFML.h  imconfig.h  imgui-SFML.h  imgui.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
include/network/: packet.h  packets.h  sender.h
include/plan/: plan.h
include/rule/: action_rule.h
src/: board.cpp  common.cpp  domain.cpp  main.cpp  numbers.cpp  positions.cpp
src/client/: animation.cpp  client_board.cpp  client_common.cpp  client_game.cpp  control_board.cpp  main.cpp  selection_state.cpp  sprites.cpp
src/client/gui/imgui/: imgui-SFML.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
src/core/: Game.cpp  board.cpp  common.cpp  domain.cpp  numbers.cpp
src/core/plan/: plan.cpp
src/main/: main.cpp
src/network/: packet.cpp  packets.cpp  sender.cpp
src/rule/: action_rule.cpp
test/: action_rule_test.cpp  border_test.cpp  game_test.cpp  plan_test.cpp  positions_test.cpp
